fixes z-index of .catalog__fig--new::before

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -171,6 +171,7 @@
     content: "new";
     display: block;
     position: absolute;
+    z-index: 1;
     top: 28px;
     right: 28px;
     width: 60px;
